--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <title>Discrete Math Club</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
 </head>
 <body>
-    <h1>Hi</h1>
+    <section class="hero is-primary is-bold">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title is-1">Discrete Math Club</h1>
+            </div>
+        </div>
+    </section>
     <div id="root">
         <div id="math">
 
